--- a/Components/Pages/Counter.razor
+++ b/Components/Pages/Counter.razor
@@ -7,15 +7,32 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+
+
+<button class="btn btn-primary" @onclick="IncrementCount">Clickme</button>
+<input type="text" @bind="currentCount" /> 
+<p role = "status">Resultado: @currentCount</p>
 
 @code {
     private int currentCount = 0;
 
+    [Parameter]
+    public int IncrementAmount { get; set; } = 1;
+
     private void IncrementCount()
     {
        /* currentCount++;*/
-        currentCount += 10;
+       currentCount += IncrementAmount; 
+    }   
+}
+  
+<input @onchange="InputChanged" />
+<p>@message</p>
+@code {
+    string message = "";
+    private void InputChanged(ChangeEventArgs e)
+    {
+       message = currentCount.ToString();
     }
 }
     
