--- a/Components/Pages/Todo.razor
+++ b/Components/Pages/Todo.razor
@@ -11,7 +11,7 @@
     {
         <li>
        
-        <input type = "checkbox"  @bind = "todo.IsDone"/>
+         <InputCheckbox @bind-Value="todo.IsDone" />
             @todo.Title
         </li>
     }       
