--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -4,5 +4,8 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+<p> Welcome to your new app.<br /> @message</p>
 <Counter IncrementAmount="10"/>
+@code {
+    string message = "This is the home page of your Blazor application.";
+}
